@@ -1,3 +1,12 @@
+2022-03-11  Zan Dobersek  <zdobersek@igalia.com>
+
+        Unreviewed isInGPUProcess() fix after 248209@main
+        https://bugs.webkit.org/show_bug.cgi?id=237762
+
+        * platform/RuntimeApplicationChecks.h:
+        (WebCore::isInGPUProcess): Define isInGPUProcess() in all cases but
+        return false if ENABLE_GPU_PROCESS is disabled.
+
 2022-03-11  Antoine Quint  <graouts@webkit.org>
 
         [web-animations] refactor discrete SVG properties to use a dedicated animation wrapper
